Added left outer Join